feat(*): apply query on mapcontext layer